# newtab

./: .env.example  .gitignore  AGENT_PROMPTS.md  CONTRIBUTING.md  DOCKER_GUIDE.md  E2E_TESTING_GUIDE.md  EXTENSION_QUICK_START.md  IMPLEMENTATION_PLAN.md  IMPROVEMENT_PLAN.md  INSTALL.md  LICENSE  LLM_PROVIDERS.md  README.md  SECURITY.md  TESTING_GUIDE.md  TEST_SUMMARY.md  UI_UX_IMPROVEMENTS_SUMMARY.md  apis.md  docker-compose.dev.yml  docker-compose.observe.yml  docker-compose.yml  prd.md  run_tests.py
backend/: .dockerignore  .env.example  .env.test  BACKEND_API_DOCS.md  Dockerfile  README.md  api_client.py  database.py  main.py  main_old.py  models.py  pyproject.toml  pytest.ini  test_query_cache.py  vector_store.py  web_memory.db
backend/arc/: __init__.py  arc_cache.py  eviction.py  utils.py
backend/docs/: ARCHITECTURE.md  DEVELOPMENT.md  REORGANIZATION_SUMMARY.md
backend/scripts/: run_all_tests.sh  run_tests.sh  seed_data.py  start_server.sh  test_quick.sh
backend/src/: __init__.py  main.py
backend/src/api/: __init__.py  analytics.py  cache.py  eviction.py  health.py  indexing.py  monitoring.py  search.py
backend/src/cache/: __init__.py  query_embedding_cache.py
backend/src/core/: config.py  database.py  exceptions.py  logging.py  models.py
backend/src/services/: __init__.py  api_client.py  multi_provider_client.py  provider_factory.py  vector_store.py
backend/tests/: __init__.py  conftest.py  test_e2e_extension.py  test_e2e_playwright.py  test_integration_api.py  test_performance.py  test_query_cache.py  test_simple_backend.py
demo/: quick-test.py  (+2 more)
(+43 files in other folders)
