[project]
name = "backend"
version = "0.1.0"
description = "Local Web Memory Backend Service - FastAPI with SQLite FTS5 and vector search"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "httpx>=0.25.0",
    "numpy>=1.24.0",
    "python-multipart>=0.0.6",
    "scikit-learn>=1.3.0",
    "requests>=2.32.4",
    "playwright>=1.54.0",
]
